2014-01-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.60 released.

2014-01-09  Carl Hetherington  <cth@carlh.net>

	* More fixes for slow-downs on fast computers.

2014-01-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.59 released.

2014-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 1.58 released.

2014-01-07  Carl Hetherington  <cth@carlh.net>

	* Fix Windows build of FFmpeg to link against zlib, which fixes parsing
	of some .mov files.

	* Very primitive check-for-updates feature added.

	* Allow still-moving-image sources to have their frame rate specified.

2014-01-06  Carl Hetherington  <cth@carlh.net>

	* Basics of per-channel audio gain (#247).

	* Give a warning on make DCP if it seems unlikely that the disk
	will have enough space to store the finished DCP (#92).

	* Make sure forced languages override the environment for gettext()
	as well as wxWidgets' i18n code (#108).

	* Bump libdcp version to get a fix for VOLINDEX/ASSETMAP file extensions
	with interop (#206).

	* Fix subtitle colouring (#152).

	* Fix mis-timed subtitles when there is a non-zero video PTS offset.

	* Remove seemingly unnecessary checks on image directories.

	* Leave DCP directory creation until the last minute to help
	avoid half-eaten directories being left around (#174).

2014-01-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.57 released.

2014-01-05  Carl Hetherington  <cth@carlh.net>

	* Use _fseeki64 on Windows when reading content files.

	* Various small fixes to i18n.

2014-01-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.56 released.

2014-01-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.55 released.

2014-01-03  Carl Hetherington  <cth@carlh.net>

	* New de_DE translation from Markus Raab.

	* Work-around mysterious call of pure virtual method inside boost.

2014-01-01  Carl Hetherington  <cth@carlh.net>

	* Bump ffmpeg version.

2013-12-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.54 released.
